--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/item2"
-        android:title="Nákupný zoznam"
+        android:title="Ingrediencie"
         android:icon="@drawable/ic_home"
         />
 
