--- a/app/src/main/res/layout/activity_adding_recept.xml
+++ b/app/src/main/res/layout/activity_adding_recept.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Dĺžka prípravy"
+        android:hint="Dĺžka prípravy (nepovinné)"
         android:layout_margin="16dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Objem kalórii na 100g"
+        android:hint="Objem kalórii na 100g (nepovinné)"
         android:layout_margin="16dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
