--- a/app/src/main/res/layout/activity_recept.xml
+++ b/app/src/main/res/layout/activity_recept.xml
@@ -17,10 +17,14 @@
             android:id="@+id/receptNazovTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:ems="10"
+            android:height="125dp"
+            android:layout_margin="3dp"
+            android:textColor="#6C5F36"
+
             android:textSize="50sp"
             android:gravity="center"
+            android:background="@drawable/text_view_border"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,45 +33,55 @@
         <TextView
             android:id="@+id/dlzkaPripravyTextView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="8dp"
+            android:layout_height="35dp"
+            android:layout_margin="3dp"
             android:ems="10"
-            android:textSize="30sp"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="#6C5F36"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/text_view_border"
             app:layout_constraintTop_toBottomOf="@+id/receptNazovTextView" />
 
         <TextView
             android:id="@+id/objemKaloriiTextView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="8dp"
+            android:layout_height="35dp"
+            android:layout_margin="3dp"
             android:ems="10"
-            android:textSize="30sp"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="#6C5F36"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/text_view_border"
             app:layout_constraintTop_toBottomOf="@+id/dlzkaPripravyTextView" />
 
         <TextView
             android:id="@+id/ingrediencieTextView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="8dp"
+            android:layout_height="80dp"
+            android:layout_margin="3dp"
             android:ems="10"
             android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="#6C5F36"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/text_view_border"
             app:layout_constraintTop_toBottomOf="@+id/objemKaloriiTextView" />
 
         <TextView
             android:id="@+id/postupTextView"
             android:layout_width="match_parent"
-            android:layout_height="270dp"
-            android:layout_margin="8dp"
+            android:layout_height="240dp"
+            android:layout_margin="3dp"
 
-
+            android:background="@drawable/text_view_border"
             android:ems="10"
             android:textSize="15sp"
+            android:textColor="#6C5F36"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingrediencieTextView" />
@@ -76,9 +90,11 @@
             android:id="@+id/poznamkyEditText"
             android:layout_width="match_parent"
             android:layout_height="85dp"
-            android:layout_margin="8dp"
+            android:layout_margin="3dp"
             android:ems="10"
             android:textSize="15sp"
+            android:textColor="#6C5F36"
+            android:hint="Miesto pre vlastné poznámky"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.466"
