--- a/app/src/main/res/layout/activity_alergeny.xml
+++ b/app/src/main/res/layout/activity_alergeny.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlergenyActivity">
+    tools:context=".activity.AlergenyActivity">
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
