--- a/app/src/main/res/layout/nakupny_zoznam_list_item.xml
+++ b/app/src/main/res/layout/nakupny_zoznam_list_item.xml
@@ -10,12 +10,15 @@
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:padding="20dp"
-        android:textSize="20sp"
+        android:textSize="15sp"
+        android:text="TextView"
         android:gravity="center"
-        android:textColor="#D2CCDD"
+        android:textColor="@color/black"
         android:background="#CF8B27"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
          />
 
 </LinearLayout>
