--- a/app/src/main/res/layout/recepty_list_item.xml
+++ b/app/src/main/res/layout/recepty_list_item.xml
@@ -12,7 +12,7 @@
         android:padding="20dp"
         android:textSize="40sp"
         android:gravity="center"
-        android:textColor="#D2CCDD"
+        android:textColor="@color/white"
         android:background="#6C5F36"
         android:drawableStart="@drawable/ic_food"
 
